...
                ),
                Container(
                  height: 100.0,
                  width: 200.0,
                  child:
                  FloatingActionButton(
                    key: Key("login"),
                    //child: Icon(Icons.ac_unit),
                    child: Text(my_texts.SignIn,style: TextStyle(fontSize: 22,color: Colors.black,fontWeight: FontWeight.bold),),

                    backgroundColor: app_colors.app_bar_background,
                    onPressed: () {
                      print("Next");
...
