...
      primary:  app_colors.button,
      minimumSize: Size(50.0, 50.0),
    ),
    child: Text(my_texts.Next, style: TextStyle(color: app_colors.text_button,fontWeight:FontWeight.bold ,fontSize: 18),),
  );
  Widget backButton()=>ElevatedButton(
    key: Key('backButton'),
    onPressed:(){
      Navigator.pop(context);

    } ,

    style: ElevatedButton.styleFrom(
...
